htmx layout improvements

--- a/Sample.Hosted/Pages/Home.cshtml
+++ b/Sample.Hosted/Pages/Home.cshtml
@@ -10,3 +10,9 @@
     <h1 class="display-4">Welcome to @ScopeContext.Settings.ApplicationName!</h1>
     <p>This is a simple home page example using Razor Pages.</p>
 </div>
+
+@section Scripts {
+    <script>
+        console.log("Hello World! 2");
+    </script>
+}
