--- a/Sample.Hosted/Pages/Shared/_SidebarActionbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarActionbar.cshtml
@@ -3,8 +3,8 @@
     var actionCount = SidebarActionCollection.DefaultItems.Count;
 }
 
-<aside class="d-flex p-1 bg-body-tertiary">
-    <nav class="d-flex flex-column align-items-center" style="width: 4.5rem;">
+<aside class="d-flex p-1 bg-body-tertiary" style="">
+    <nav class="d-flex flex-column align-items-center" style="overflow-y: auto;">
         <ul id="ActionbarActionList" class="nav nav-pills nav-flush flex-column mb-auto">
             @foreach (var navItem in SidebarActionCollection.DefaultItems)
             {
