htmx layout improvements 2

--- a/Sample.Hosted/Pages/Shared/_Footer.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Footer.cshtml
@@ -5,7 +5,7 @@
 }
 
 <footer class="border-top footer text-muted mt-auto ">
-    <div class="container bg-light d-flex justify-content-between align-items-center py-1">
+    <div class="container-xxl bg-light d-flex justify-content-between align-items-center py-1">
         <div id="FooterLeft">
             &copy; @DateTime.Now.Year - @ScopeContext.Settings.ApplicationName
         </div>
