--- a/Sample.Hosted/Pages/Shared/_LayoutBaseHtmx.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBaseHtmx.cshtml
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>@ViewData[ViewDataFor.Title] - @ScopeContext.Settings.ApplicationName</title>
 </head>
-<body class="d-flex flex-column bg-secondary-subtle vh-100"  hx-boost="true">
+<body class="d-flex flex-column bg-secondary-subtle vh-100" hx-boost="true" hx-ext="safe-nonce" hx-history="false">
 @RenderBody()
 
-@await RenderSectionAsync("LayoutBaseScripts", required: false)
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
