--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -1,6 +1,6 @@
 @using DRN.Framework.SharedKernel.Enums
 
-<header class="navbar navbar-expand-lg container bg-primary" data-bs-theme="dark">
+<header class="navbar navbar-expand-lg container-xxl bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center link-body-emphasis text-decoration-none" href="@PageFor.Root.Home" mark-when-active="false">
             <i class="bi bi-bootstrap-reboot me-2" style="font-size: 1.5rem; "></i>@ScopeContext.Settings.ApplicationName
