--- a/Sample.Hosted/Pages/Home.cshtml
+++ b/Sample.Hosted/Pages/Home.cshtml
@@ -2,14 +2,23 @@
 @model Sample.Hosted.Pages.Home
 
 @{
-    ViewData[ViewDataFor.Title] = "Home Page";
-    ViewData[ViewDataFor.CenterVertically] = true;
+    var title = "Home Page";
+    var options = LayoutOptionsFor.Centered(string.Empty);
+    options.Type = MainContentType.None;
+    options.ColumnSize = BootstrapColumnSize.None;
+    
+    ViewData[ViewDataFor.Title] = title;
+    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
 }
 
-<div class="row justify-content-center text-center">
-    <h1 class="display-4">Welcome to @ScopeContext.Settings.ApplicationName!</h1>
-    <p>This is a simple home page example using Razor Pages.</p>
-</div>
+@* UI Examples
+https://hypermedia.gallery/built-with/htmx/
+https://getbootstrap.com/docs/5.3/examples/
+https://themes.getbootstrap.com
+*@
+
+<h1 class="display-4">Welcome to @ScopeContext.Settings.ApplicationName!</h1>
+<p>This is a simple home page example using Razor Pages.</p>
 
 @section Scripts {
     <script>
