--- a/Sample.Hosted/Pages/System/Setup.cshtml
+++ b/Sample.Hosted/Pages/System/Setup.cshtml
@@ -2,36 +2,29 @@
 @model Sample.Hosted.Pages.System.SetupModel
 
 @{
-    ViewData[ViewDataFor.Title] = "Initial Setup";
-    ViewData[ViewDataFor.CenterVertically] = true;
+    var title = "Initial Setup";
+    var options = LayoutOptionsFor.Centered(title);
+    ViewData[ViewDataFor.Title] = title;
+    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
 }
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h2 class="text-center">Initial Setup</h2>
-        <div class="card">
-            <div class="card-body">
-                <form method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Input.Email" class="form-control" type="email" placeholder="name@example.com"/>
-                        <label asp-for="Input.Email"></label>
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password"/>
-                        <label asp-for="Input.Password"></label>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Input.ConfirmPassword" type="password" class="form-control"
-                               placeholder="Password"/>
-                        <label asp-for="Input.ConfirmPassword"></label>
-                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block mt-3">Create Admin</button>
-                </form>
-            </div>
-        </div>
+<form method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-floating mb-3">
+        <input asp-for="Input.Email" class="form-control" type="email" placeholder="name@example.com"/>
+        <label asp-for="Input.Email"></label>
+        <span asp-validation-for="Input.Email" class="text-danger"></span>
     </div>
-</div>
+    <div class="form-floating mb-3">
+        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password"/>
+        <label asp-for="Input.Password"></label>
+        <span asp-validation-for="Input.Password" class="text-danger"></span>
+    </div>
+    <div class="form-floating mb-3">
+        <input asp-for="Input.ConfirmPassword" type="password" class="form-control"
+               placeholder="Password"/>
+        <label asp-for="Input.ConfirmPassword"></label>
+        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary btn-block mt-3">Create Admin</button>
+</form>
