--- a/Sample.Hosted/Pages/User/Lockout.cshtml
+++ b/Sample.Hosted/Pages/User/Lockout.cshtml
@@ -1,20 +1,14 @@
 @page
 @model Sample.Hosted.Pages.User.LockoutModel
 @{
-    ViewData[ViewDataFor.Title] = "Account Locked Out";
-    ViewData[ViewDataFor.CenterVertically] = true;
+    var title = "Account Locked Out";
+    var options = LayoutOptionsFor.Centered(title);
+    ViewData[ViewDataFor.Title] = title;
+    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
+    
     var lockOutMinutes = IdentitySettings.LockoutOptions.DefaultLockoutTimeSpan.Minutes;
 }
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h2 class="text-center">@ViewData[ViewDataFor.Title]</h2>
-        <div class="card">
-            <div class="card-body">
-                <p>Your account has been temporarily locked due to multiple invalid attempts.</p>
-                <p>Please try again @lockOutMinutes minutes later.</p>
-                <p>If you believe this is a mistake, contact support for assistance.</p>
-            </div>
-        </div>
-    </div>
-</div>
+<p>Your account has been temporarily locked due to multiple invalid attempts.</p>
+<p>Please try again @lockOutMinutes minutes later.</p>
+<p>If you believe this is a mistake, contact support for assistance.</p>
