--- a/Sample.Hosted/Pages/User/Login.cshtml
+++ b/Sample.Hosted/Pages/User/Login.cshtml
@@ -2,41 +2,34 @@
 @model Sample.Hosted.Pages.User.LoginModel
 
 @{
-    ViewData[ViewDataFor.Title] = "Log in";
-    ViewData[ViewDataFor.CenterVertically] = true;
+    var title = "Log in";
+    var options = LayoutOptionsFor.Centered(title);
+    ViewData[ViewDataFor.Title] = title;
+    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
 }
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h2 class="text-center">@ViewData[ViewDataFor.Title]</h2>
-        <div class="card">
-            <div class="card-body">
-                <form method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
+<form method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
 
-                    <div class="form-floating mb-3">
-                        <input asp-for="Input.Email" class="form-control" type="email" placeholder="name@example.com"/>
-                        <label asp-for="Input.Email"></label>
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-floating mb-3">
-                        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password"/>
-                        <label asp-for="Input.Password"></label>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group mb-3 form-check">
-                        <input asp-for="Input.RememberMe" class="form-check-input"/>
-                        <label asp-for="Input.RememberMe" class="form-check-label"></label>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Log in</button>
-                </form>
-
-                <p class="mt-3">
-                    <a asp-page="@PageFor.User.Register">Register as a new user</a>
-                </p>
-            </div>
-        </div>
+    <div class="form-floating mb-3">
+        <input asp-for="Input.Email" class="form-control" type="email" placeholder="name@example.com"/>
+        <label asp-for="Input.Email"></label>
+        <span asp-validation-for="Input.Email" class="text-danger"></span>
     </div>
-</div>
+
+    <div class="form-floating mb-3">
+        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password"/>
+        <label asp-for="Input.Password"></label>
+        <span asp-validation-for="Input.Password" class="text-danger"></span>
+    </div>
+
+    <div class="form-group mb-3 form-check text-start">
+        <input asp-for="Input.RememberMe" class="form-check-input"/>
+        <label asp-for="Input.RememberMe" class="form-check-label"></label>
+    </div>
+    <button type="submit" class="btn btn-primary w-100">Log in</button>
+</form>
+
+<p class="mt-3">
+    <a asp-page="@PageFor.User.Register">Register as a new user</a>
+</p>
