--- a/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
+++ b/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
@@ -2,28 +2,21 @@
 @model Sample.Hosted.Pages.User.LoginWith2Fa
 
 @{
-    ViewData[ViewDataFor.Title] = "Two-Factor Authentication";
-    ViewData[ViewDataFor.CenterVertically] = true;
+    var title = "Two-Factor Authentication";
+    var options = LayoutOptionsFor.Centered(title);
+    ViewData[ViewDataFor.Title] = title;
+    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
 }
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h2 class="text-center">@ViewData[ViewDataFor.Title]</h2>
-        <div class="card">
-            <div class="card-body">
-                <form method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Login2FaModel.TwoFactorCode" class="form-control" placeholder="TwoFactorCode" autocomplete="one-time-code"/>
-                        <label asp-for="Login2FaModel.TwoFactorCode"></label>
-                    </div>
-                    <div class="form-group mb-3 form-check">
-                        <input asp-for="Login2FaModel.RememberMe" class="form-check-input"/>
-                        <label asp-for="Login2FaModel.RememberMe" class="form-check-label"></label>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Verify</button>
-                </form>
-            </div>
-        </div>
+<form method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-floating mb-3">
+        <input asp-for="Login2FaModel.TwoFactorCode" class="form-control" placeholder="TwoFactorCode" autocomplete="one-time-code"/>
+        <label asp-for="Login2FaModel.TwoFactorCode"></label>
     </div>
-</div>
+    <div class="form-group mb-3 form-check text-start">
+        <input asp-for="Login2FaModel.RememberMe" class="form-check-input"/>
+        <label asp-for="Login2FaModel.RememberMe" class="form-check-label"></label>
+    </div>
+    <button type="submit" class="btn btn-primary w-100">Verify</button>
+</form>
