--- a/Sample.Hosted/Pages/User/Logout.cshtml
+++ b/Sample.Hosted/Pages/User/Logout.cshtml
@@ -1,26 +1,19 @@
 @page
 @model Sample.Hosted.Pages.User.LogoutModel
+
 @{
-    ViewData[ViewDataFor.Title] = "Log out";
-    ViewData[ViewDataFor.CenterVertically] = true;
+    var title = "Log out";
+    var options = LayoutOptionsFor.Centered(title);
+    ViewData[ViewDataFor.Title] = title;
+    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
 }
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h2 class="text-center">@ViewData[ViewDataFor.Title]</h2>
+<form method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <p class="text-center">Are you sure you want to log out?</p>
 
-        <div class="card">
-            <div class="card-body">
-                <form method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <p class="text-center">Are you sure you want to log out?</p>
-
-                    <div class="d-grid gap-2 d-md-flex">
-                        <button type="submit" class="btn btn-primary w-50">Log out</button>
-                        <a asp-page="@PageFor.Root.Home" class="btn btn-secondary w-50">Cancel</a>
-                    </div>
-                </form>
-            </div>
-        </div>
+    <div class="d-grid gap-2 d-md-flex">
+        <button type="submit" class="btn btn-primary w-50">Log out</button>
+        <a asp-page="@PageFor.Root.Home" class="btn btn-secondary w-50">Cancel</a>
     </div>
-</div>
+</form>
