--- a/Sample.Hosted/Pages/User/Management/EnableAuthenticator.cshtml
+++ b/Sample.Hosted/Pages/User/Management/EnableAuthenticator.cshtml
@@ -2,49 +2,42 @@
 @model Sample.Hosted.Pages.User.Management.EnableAuthenticator
 
 @{
-    ViewData[ViewDataFor.Title] = "Enable Authenticator";
-    ViewData[ViewDataFor.CenterVertically] = true;
+    var title = "Enable Authenticator";
+    var options = LayoutOptionsFor.Centered(title);
+    ViewData[ViewDataFor.Title] = title;
+    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
 }
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h2 class="text-center">@ViewData[ViewDataFor.Title]</h2>
-        <div class="card">
-            <div class="card-body">
-                @if (Model.HasRecoveryCodes)
-                {
-                    <p>Save these recovery codes in a safe place:</p>
+@if (Model.HasRecoveryCodes)
+{
+    <p>Save these recovery codes in a safe place:</p>
 
-                    <ul>
-                        @foreach (var recoveryCode in Model.RecoveryCodes)
-                        {
-                            <li>@recoveryCode</li>
-                        }
-                    </ul>
+    <ul class="list-group list-group-flush lh-1">
+        @foreach (var recoveryCode in Model.RecoveryCodes)
+        {
+            <li class="list-group-item">@recoveryCode</li>
+        }
+    </ul>
 
-                    <div class="col-auto mt-3">
-                        <a href="@PageFor.User.Login" class="btn btn-secondary">Login</a>
-                    </div>
-                }
-                else
-                {
-                    <p>Scan the QR code with your authenticator app:</p>
-                    <img src="data:image/png;base64,@Html.Raw(Model.GenerateQrCodeImageAsBase64())" style="max-width: 200px; max-height: 200px;" alt="QR Code"/>
-
-                    <p>Or enter this code manually:</p>
-                    <code>@Model.SharedKey</code>
-
-                    <form method="post" asp-page-handler="Verify">
-                        <div class="form-floating mb-3">
-                            <input asp-for="QrCodeVerify.Code" class="form-control"/>
-                            <label asp-for="QrCodeVerify.Code"></label>
-                            <span asp-validation-for="QrCodeVerify.Code" class="text-danger"></span>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary w-100">Verify</button>
-                    </form>
-                }
-            </div>
-        </div>
+    <div class="col-auto mt-3">
+        <a href="@PageFor.User.Login" class="btn btn-secondary">Login</a>
     </div>
-</div>
+}
+else
+{
+    <p>Scan the QR code with your authenticator app:</p>
+    <img src="data:image/png;base64,@Html.Raw(Model.GenerateQrCodeImageAsBase64())" style="max-width: 200px; max-height: 200px;" alt="QR Code"/>
+
+    <p>Or enter this code manually:</p>
+    <code>@Model.SharedKey</code>
+
+    <form method="post" asp-page-handler="Verify">
+        <div class="form-floating mb-3">
+            <input asp-for="QrCodeVerify.Code" class="form-control"/>
+            <label asp-for="QrCodeVerify.Code"></label>
+            <span asp-validation-for="QrCodeVerify.Code" class="text-danger"></span>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Verify</button>
+    </form>
+}
