--- a/Sample.Hosted/Pages/User/Profile/Picture.cshtml
+++ b/Sample.Hosted/Pages/User/Profile/Picture.cshtml
@@ -2,18 +2,20 @@
 @using Sample.Hosted.TagHelpers
 @model Sample.Hosted.Pages.User.Profile.ProfilePictureModel
 @{
-    ViewData[ViewDataFor.Title] = "Profile Picture";
-    ViewData[ViewDataFor.SubNavigation] = SubNavigationFor.ProfileSubNavigationCollection;
-    ViewData[ViewDataFor.MainContentAsCard] = true;
-    ViewData[ViewDataFor.MainContentCardTitle] = ViewData[ViewDataFor.Title];
+    var title = "Profile Picture";
+    var options = LayoutOptionsFor.Full(title);
+    options.SubNavigation=SubNavigationFor.ProfileSubNavigationCollection;
+    options.Type = MainContentType.Card;
+
+    ViewData[ViewDataFor.Title] = title;
+    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
 }
 
 <div class="card-body">
     @if (!string.IsNullOrEmpty(ScopeContext.UserId))
     {
-        <label>Current Profile Picture:</label>
         <div>
-            <profile-picture class="img-thumbnail" style="max-height: 300px"/>
+            <profile-picture class="img-thumbnail" style="max-height: 250px"/>
         </div>
     }
 </div>
