--- a/Sample.Hosted/Pages/User/Register.cshtml
+++ b/Sample.Hosted/Pages/User/Register.cshtml
@@ -2,38 +2,31 @@
 @model Sample.Hosted.Pages.User.RegisterModel
 
 @{
-    ViewData[ViewDataFor.Title] = "Register";
-    ViewData[ViewDataFor.CenterVertically] = true;
+    var title = "Register";
+    var options = LayoutOptionsFor.Centered(title);
+    ViewData[ViewDataFor.Title] = title;
+    ViewData[ViewDataFor.MainContentLayoutOptions] = options;
 }
 
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h2 class="text-center">Register</h2>
-        <div class="card">
-            <div class="card-body">
-                <form method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Input.Email" class="form-control" type="email" placeholder="name@example.com"/>
-                        <label asp-for="Input.Email"></label>
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password"/>
-                        <label asp-for="Input.Password"></label>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Password"/>
-                        <label asp-for="Input.ConfirmPassword"></label>
-                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Register</button>
-                </form>
-                <p class="mt-3">
-                    <a asp-page="@PageFor.User.Login">Already have an account? Log in</a>
-                </p>
-            </div>
-        </div>
+<form method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-floating mb-3">
+        <input asp-for="Input.Email" class="form-control" type="email" placeholder="name@example.com"/>
+        <label asp-for="Input.Email"></label>
+        <span asp-validation-for="Input.Email" class="text-danger"></span>
     </div>
-</div>
+    <div class="form-floating mb-3">
+        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password"/>
+        <label asp-for="Input.Password"></label>
+        <span asp-validation-for="Input.Password" class="text-danger"></span>
+    </div>
+    <div class="form-floating mb-3">
+        <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Password"/>
+        <label asp-for="Input.ConfirmPassword"></label>
+        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary w-100">Register</button>
+</form>
+<p class="mt-3">
+    <a asp-page="@PageFor.User.Login">Already have an account? Log in</a>
+</p>
