--- a/Sample.Hosted/Pages/Shared/_SidebarActionbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarActionbar.cshtml
@@ -1,12 +1,13 @@
 @{
     var index = 0;
     var actionCount = SidebarActionCollection.DefaultItems.Count;
+    var sidebarActionCollection = ViewData[ViewDataFor.SidebarActionCollection] as SidebarActionCollection ?? new SidebarActionCollection();
 }
 
 <aside class="d-flex p-1 bg-body-tertiary flex-column align-items-center">
     <nav class="flex-grow-1" style="overflow-y:auto; overflow-x: hidden">
         <ul id="ActionbarActionList" class="nav nav-pills nav-flush flex-column mb-auto">
-            @foreach (var navItem in SidebarActionCollection.DefaultItems)
+            @foreach (var navItem in sidebarActionCollection.Items)
             {
                 var borderBottom = ++index == actionCount ? "border-bottom" : "";
                 var canvasId = $"#offCanvasSidebarAction{navItem.Id}";
